# egui-greeter

./: Cargo.toml  README.md  flake.nix  result
src/: app.rs  auth_thread.rs  inputs.rs  main.rs  power_area.rs  search_selector.rs  sessions.rs  settings.rs  time_area.rs
