[package]
name = "egui-greeter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
catppuccin-egui = {version = "5.5.0", default-features = false, features = ["egui31"]}
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
eframe = "0.31.1"
egui = "0.31.1"
egui-toast = "0.17.0"
env_logger = "0.11.8"
freedesktop-desktop-entry = "0.7.13"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["net", "rt", "sync"] }
